# DiscordAlertsTrader

./: CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py  setup_TDA.py  test_tracker_portfolio.csv
.github/scripts/: AgentInfo.sh
.github/workflows/: workflows.yaml
DiscordAlertsTrader/: __init__.py  alerts_tracker.py  alerts_trader.py  calc_strat.py  configurator.py  custom_msg_format_example.py  discord_bot.py  gui.py  gui_generator.py  gui_layouts.py  message_parser.py  port_sim.py  read_hist_msg.py  server_alert_formatting.py
DiscordAlertsTrader/api_examples/: discord_webhook_example.py
DiscordAlertsTrader/brokerages/: TDA_api.py  __init__.py  eTrade_api.py  ibkr_api.py  schwab_api.py  tradestation_api.py  weBull_api.py
DiscordAlertsTrader/brokerages/tradestation/: __init__.py  auth.py
DiscordAlertsTrader/brokerages/tradestation/client/: __init.__.py  asynchronous.py  base.py  synchronous.py
DiscordAlertsTrader/brokerages/webull/: __init__.py  endpoints.py  streamconn.py  webull.py
DiscordAlertsTrader/marketdata/: load_chn_hist.py  polygon.py  thetadata_api.py
tests/: __init__.py  mock_discord_message.py  test_AlertsTracker.py  test_AlertsTrader.py  test_AlertsTrader_exits.py  test_TDA.py  test_calc_rois.py  test_configurator.py  test_discord_bot.py  test_gui_generator.py  test_msg_parsed.py
