[project]
name = "DiscordAlertsTrader"
version = "1.0.2"
description = "Package for automating discord trade alerts in TDA or eTrade."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "BSD (3-clause)" }
authors = [
    { name = "Adonay Nunes", email = "adonays.nunes@gmail.com" }
]
maintainers = [
    { name = "Adonay Nunes", email = "adonays.nunes@gmail.com" }
]
keywords = ["discord", "trading", "alerts", "automation", "finance", "options", "stocks"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "colorama",
    "discord-webhook",
    "discord.py-self",
    "matplotlib",
    "numpy",
    "pandas",
    "pyetrade",
    "PySimpleGUIQt",
    "requests",
    "httpx",
    "ib_async",
]

[dependency-groups]
dev = [
    "ruff",
    "twine",
]
debug = [
    "build",
    "setuptools",
    "wheel",
    "pip-tools",
    "pipdeptree",
]

[project.scripts]
DiscordAlertsTrader = "DiscordAlertsTrader.gui:gui"

[project.urls]
"Homepage" = "https://github.com/AdoNunes/DiscordAlertsTrader"
"Download" = "https://github.com/AdoNunes/DiscordAlertsTrader"
"Bug Tracker" = "https://github.com/AdoNunes/DiscordAlertsTrader/issues"

[tool.uv]
managed = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["DiscordAlertsTrader*"]

# Project uses unittest framework
# Run tests with: python -m unittest discover tests -v

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
